Fix alignment in desktop mode, fix most of the responsive issues

--- a/site/assets/styles/_footer.scss
+++ b/site/assets/styles/_footer.scss
@@ -212,9 +212,14 @@ a.dropdown-item:before {
   .nav-footer-right {
     display: none !important;
   }
+  
+  .nav-footer-left {
+    display: flex !important;
+  }
 }
 
 @media (min-width: 1150px) {
+  .nav-footer-left,
   .nav-footer-center {
     display: flex !important;
   }
